--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DevNasra</title>
 </head>
 <body>
-    Hi I am Dev Nasra.
+    Heyyy I am Dev Nasra.
     I study in MIT Manipal
     I am exploring HTML
 </body>
